MB-20196: Validate iterator seek range for deleted keys

Change-Id: I35affa14cffffa1d78aa80bfcb503c952b7f0366
Reviewed-on: http://review.couchbase.org/65974
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: buildbot <build@couchbase.com>